mule-user-guide/v/3.7/exception-strategy-configuration-reference.adoc
= Exception Strategy Configuration Reference
:keywords: error handling, exceptions, exception catching, exceptions

This page provides details on the elements you configure for exception strategies. This information is pulled directly from `mule.xsd` and is cached. If the information appears to be out of date, refresh the page. For more information on exception strategies, see link:/mule-user-guide/v/3.7/error-handling[Error Handling].

== Default Exception Strategy

Provides default exception handling.

.Attributes of <default-exception-strategy...>
[cols=",",options="header"]
|===
|Name |Description
|`enableNotifications` |Determines whether `ExceptionNotifications` are fired from this strategy when an exception occurs.

*Type*: `boolean` +
*Required*: no +
*Default*: none
|`name` |Name of the exception strategy used in ref attribute of `exception-strategy` element.

*Type*: `name (no spaces)` +
*Required*: no +
*Default*: none
|`when` |The expression to be evaluated to determine if this exception strategy should be executed. This should always be a boolean expression.

*Type*: `string` +
*Required*: no +
*Default*: none
|`stopMessageProcessing` |Stop the flow/service when an exception occurs. Restart the flow/service manually after this (for example, using JMX).

*Type*: `boolean` +
*Required*: no +
*Default*: `false`
|===

.Child Elements of <default-exception-strategy...>
[cols=",",options="header"]
|===
|Name |Cardinality |Description
|`commit-transaction` |0..1 |These exceptions are considered "delivered" after handling by the exception strategy. Any exception not accepted by this filter is redelivered/rolled back. You can set a comma-separated list of wildcard patterns that's matched against the fully qualified class name of the current exception.
|`rollback-transaction` |0..1 |These exceptions are redelivered/rolled back after handling by the exception strategy. You can set a comma-separated list of wildcard patterns that's matched against the fully qualified class name of the current exception.
|`abstract-message-processor` |0..1 |A message processor A placeholder for message processor elements.
|`abstract-outbound-endpoint` |0..1 |An outbound endpoint A placeholder for outbound endpoint elements. Outbound endpoints dispatch messages to the underlying transport.
|`abstract-mixed-content-message-processor` |0..1 |A placeholder for message processor elements.
|===

== Custom Exception Strategy

A user-defined exception strategy.

.Attributes of <custom-exception-strategy...>
[cols=",",options="header"]
|===
|Name |Description
|`enableNotifications` |Determines whether ExceptionNotifications are fired from this strategy when an exception occurs. Default is true.

*Type*: `boolean` +
*Required*: no +
*Default*: `true`
|`name` |Name of the exception strategy that's used in ref attribute of 'exception-strategy' element.

*Type*: `name (no spaces)` +
*Required*: no +
*Default*: none
|`when` |The expression that's evaluated to determine if this exception strategy should be executed. This should always be a boolean expression.

*Type*: `string` +
*Required*: no +
*Default*: none
|`class` |A class that implements the ExceptionListener interface. In addition, if an 'outbound-endpoint' element is specified, it is set as an "endpoint" bean property.

*Type*: `class name` +
*Required*: yes +
*Default*: `true`
|===

.Child Elements of <custom-exception-strategy...>
[cols=",",options="header"]
|===
|Name |Cardinality |Description
|`commit-transaction` |0..1 |These exceptions are considered "delivered" after handling by the exception strategy. Any exception not accepted by this filter is redelivered/rolled back. You can set a comma-separated list of wildcard patterns that are matched against the fully qualified class name of the current exception.
|`rollback-transaction` |0..1 |These exceptions are redelivered/rolled back after handling by the exception strategy. You can set a comma-separated list of wildcard patterns that is matched against the fully qualified class name of the current exception.
|`abstract-message-processor` |0..1 |A message processor A placeholder for message processor elements.
|`abstract-outbound-endpoint` |0..1 |An outbound endpoint A placeholder for outbound endpoint elements. Outbound endpoints dispatch messages to the underlying transport.
|`abstract-mixed-content-message-processor` |0..1 |A placeholder for message processor elements.
|`spring:property` |0..* |Spring-style property element for custom configuration.
|===

== See Also

* link:http://training.mulesoft.com[MuleSoft Training]
* link:https://www.mulesoft.com/webinars[MuleSoft Webinars]
* link:http://blogs.mulesoft.com[MuleSoft Blogs]
* link:http://forums.mulesoft.com[MuleSoft Forums]
